Completed implementation of graph visualization with multiple self-loops or multiple rels between nodes

--- a/ui/public/style.css
+++ b/ui/public/style.css
@@ -98,6 +98,12 @@ body{
     /*marker-start: url(#label);*/
 }
 
+.graph-edge-reverse {
+    stroke-width: 2;
+    fill: none;
+    marker-start: url(#arrowhead-reverse);
+    /*marker-start: url(#label);*/
+}
 
 #Textarea-12 {
     background: url(linenumbers.png);
