--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,8 @@
 
-
-body{
+body {
     background-color: rgb(206, 206, 206);
 }
+
 .log-snip {
     height: 200px;
     overflow: scroll;
@@ -16,21 +16,29 @@ body{
     transform: translateY(-18px) scale(0.8);
 }
 
+.select-dropdown {
+    top: 0px !important;
+}
+
 .log {
     background-color: lightgrey;
     font-size: 12px;
 }
-.preloader-wrapper{
-    width:25px;
-    height:25px;
+
+.preloader-wrapper {
+    width: 25px;
+    height: 25px;
 }
+
 code {
     background-color: #eee;
     display: inline-block;
 }
+
 .autocomplete-content {
     top: 50px !important;
 }
+
 .card-content .autocomplete-div ul:not(.browser-default) > li {
     list-style-type: none;
     margin-left: 0px;
@@ -41,16 +49,19 @@ code {
     background-color: #eee;
 
 }
+
 .card-content ul:not(.browser-default) > li {
     list-style-type: disc;
     margin-left: 40px;
     padding-left: 0px;
 }
-.badge-strip{
+
+.badge-strip {
     position: absolute;
     right: 0px;
     top: 0px;
 }
+
 #root {
     background-color: #efefef;
 }
@@ -61,16 +72,19 @@ code {
     margin-top: 150px;
     margin-bottom: 150px;
 }
-.btn-center-align :hover  {
+
+.btn-center-align :hover {
     opacity: 0.7;
 }
 
 .card {
     padding-bottom: 55px;
 }
+
 .card-content {
     padding-bottom: 0px !important;
 }
+
 .card-content td {
     padding: 10px 4px;
 }
@@ -78,25 +92,30 @@ code {
 .card-content th {
     padding: 4px 4px;
 }
+
 .card-content th:not(:first-child) {
 
-    min-width:60px;
+    min-width: 60px;
 }
 
 .card-action {
     max-height: 200px;
 }
-.card-action .pagination a{
+
+.card-action .pagination a {
     color: #000 !important;
     margin-right: 0px !important;
 }
-.card-action .pagination li{
+
+.card-action .pagination li {
     width: 40px;
 }
+
 .card-content img {
     width: 100%;
 }
-.card-action .pagination{
+
+.card-action .pagination {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
     width: 290px;
@@ -105,17 +124,19 @@ code {
     margin-left: auto !important;
     margin-right: auto !important;
 }
+
 /*.card-content div {*/
 /*    height: 325px;*/
 /*}*/
 
-.paginated-card .card-action{
+.paginated-card .card-action {
     padding-left: 0px;
     padding-right: 0px;
     display: block;
 
 
 }
+
 .input-field {
 
     margin-top: 7px;
@@ -144,7 +165,7 @@ code {
     font-family: monospace;
     font-size: 14px;
     line-height: 16px;
-    border-color:#ccc;
+    border-color: #ccc;
     width: calc(100% + 30px);
     display: block;
     background-size: 26px;
@@ -164,11 +185,13 @@ code {
     min-height: 80px;
     /*height: 200px !important;*/
 }
-.nav-wrapper .input-field .editable-title{
+
+.nav-wrapper .input-field .editable-title {
     margin-top: 0px !important;
     border-bottom: 0px !important;
     font-size: 30px;
 }
+
 .flag {
     background: url('https://dl.dropboxusercontent.com/s/yx2q52k9g420tov/flags.png') no-repeat;
     background-color: #000;
@@ -179,37 +202,45 @@ code {
     margin-top: -25px !important;
     border-bottom: 0px !important;
 }
+
 .card-title .input-field .helper-text {
     display: none !important;
 }
+
 .card-title i {
     top: 20px;
     right: 20px;
     position: absolute;
 }
-.card-reveal .card-title .input-field{
+
+.card-reveal .card-title .input-field {
     display: none !important;
 }
 
-.card-reveal .card-title p{
+.card-reveal .card-title p {
     display: inline !important;
 }
+
 .pagination li.active {
     background-color: #ddd;
 }
+
 .card.huge {
     height: 822px;
 }
 
-.card-title textarea:disabled{
+.card-title textarea:disabled {
     color: black !important;
 }
-nav textarea:disabled{
+
+nav textarea:disabled {
     color: white !important;
 }
+
 .select-wrapper {
     width: 140px;
 }
+
 .card-action .select-wrapper {
     width: 120px;
 }
@@ -217,20 +248,23 @@ nav textarea:disabled{
 .fixed-icon {
     position: fixed;
 }
+
 .wide-button {
     width: 120px;
     padding-left: 0px;
 }
+
 .neo-color {
     /*background-color: #008cc1;*/
     background-color: white;
     color: grey;
 }
 
-.neo-card .card-content{
+.neo-card .card-content {
     overflow-y: auto !important;
     overflow-x: auto !important;
 }
+
 #modal-dark-footer .modal-footer {
     background-color: #555;
     color: lightgrey;
@@ -248,19 +282,21 @@ nav textarea:disabled{
 
 /* Hide scrollbar for IE, Edge and Firefox */
 #Textarea-12 {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 .helper-text {
     display: none !important;
 }
+
 .chip {
     position: relative;
     margin-bottom: 5px;
 }
+
 /* Select inside chip */
-.chip .input-field{
+.chip .input-field {
     position: absolute;
 
     top: 0px;
@@ -270,26 +306,32 @@ nav textarea:disabled{
     width: 100%;
     color: transparent;
 }
-.chip .input-field .select-wrapper{
+
+.chip .input-field .select-wrapper {
     position: absolute;
     width: 100%;
 
     height: 30px;
 }
-.chip .input-field .select-wrapper input{
+
+.chip .input-field .select-wrapper input {
     color: transparent;
     border-bottom: none;
 }
-.chip .input-field .select-wrapper .select-dropdown{
+
+.chip .input-field .select-wrapper .select-dropdown {
     position: absolute;
     width: 200px;
 }
-.chip .input-field label{
+
+.chip .input-field label {
     display: none;
 }
-.chip .input-field .select-wrapper svg{
+
+.chip .input-field .select-wrapper svg {
     display: none;
 }
+
 .nav-wrapper .input-field {
     position: absolute;
     margin-left: auto;
@@ -298,19 +340,22 @@ nav textarea:disabled{
     right: 0;
     margin-right: auto;
 }
+
 .nav-wrapper ul {
     z-index: -99;
 }
-.nav-wrapper .input-field textarea{
+
+.nav-wrapper .input-field textarea {
     position: absolute;
 
 
 }
+
 .container {
     width: 97.5%;
 }
 
-.modal-input-text .input-field.col label{
+.modal-input-text .input-field.col label {
     left: 0px;
 }
 
