--- a/public/style.css
+++ b/public/style.css
@@ -88,10 +88,23 @@ code {
     background-color: #444;
     opacity: 0.2;
     margin-left: 15px;
-    margin-top: -4px;
+    margin-top: -5px;
     margin-right: 15px;
 }
-
+.leaflet-marker-icon {
+    width: 25px !important;
+    height: 30px !important;
+}
+.leaflet-popup {
+    margin-bottom: 35px;
+}
+.leaflet-marker-icon .material-icons {
+    font-size: 34px;
+    margin-left: 33px;
+    margin-top: -6px;
+    -webkit-text-stroke-width: 1.5px;
+    -webkit-text-stroke-color: #444;
+}
 .tabs .disabled {
     width: auto !important;
 }
