Added background coloring option for cards, experimental reports to be added by file only

--- a/public/style.css
+++ b/public/style.css
@@ -124,6 +124,9 @@ code {
     box-shadow: none !important;
     -webkit-box-shadow: none !important;
 }
+html { scroll-behavior: smooth; }
+
+
 .tab {
     width: 250px;
     -webkit-box-flex: 0 !important;
