--- a/public/style.css
+++ b/public/style.css
@@ -121,3 +121,13 @@
   #center-aligned {
       text-align: center;
   }
+
+.card-view.expanded {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: white;
+    z-index: 1299;
+}
