--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,10 @@
 .no-underline .MuiInput-underline::before {
     border-bottom: none;
 }
-
+.MuiContainer-root{
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+}
 .large input {
     font-size: 20px;
     margin-top: -6px;
