Fixed graph hover to match other app styling

--- a/public/style.css
+++ b/public/style.css
@@ -137,3 +137,8 @@
     background: white;
     z-index: 1299;
 }
+
+.force-graph-container .graph-tooltip {
+    color: black !important;
+    background: none !important;
+}
