Added color selector component. Clean up/refactoring of file names

--- a/public/style.css
+++ b/public/style.css
@@ -76,6 +76,10 @@
 .MuiTablePagination-root{
     margin-top: -10px;
 } */
+.chrome-picker {
+    margin-top: -285px;
+    margin-left: 10px;
+}
 .MuiTablePagination-root{
     margin-top: -10px;
 }
