Added CSV download button to tables

--- a/public/style.css
+++ b/public/style.css
@@ -76,6 +76,9 @@
 .MuiTablePagination-root{
     margin-top: -10px;
 } */
+.MuiDataGrid-footerContainer {
+    border-top: none !important;
+}
 .chrome-picker {
     margin-top: -285px;
     margin-left: 10px;
