Tweaking style for the new resizable reports

--- a/public/style.css
+++ b/public/style.css
@@ -72,6 +72,9 @@
     color: rgb(199, 199, 199);
 }
 
+.MuiDataGrid-footerContainer {
+    border: none !important;
+}
 .neodash-card-editable-false .react-resizable-handle {
     display: none;
 }
