--- a/public/style.css
+++ b/public/style.css
@@ -84,8 +84,8 @@
 }
 
 .react-grid-item>.react-resizable-handle::after {
-    border-right: 2px solid rgba(0, 0, 0, 0.1) !important;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1) !important;
+    border-right: 2px solid rgba(0, 0, 0, 0.4) !important;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.4) !important;
 }
 
 /* .MuiDataGrid-columnHeaders {
@@ -192,4 +192,8 @@
 
 .not-animated .react-grid-item.cssTransforms {
     transition-property: none !important;
+}
+
+.react-grid-layout {
+    overflow: hidden;
 }
