--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,12 @@
     margin-bottom:0.5em!important;
 }
 
+.centered-spinner {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+}
+
 .MuiDrawer-paper {
     position: relative !important;
 }
