upgrade to @neo4j-cypher/react-codemirror package (#286)
* upgrade to neo4j-cypher/react-codemirror package

* bump @neo4j-cypher/react-codemirror

* remove unused old cypher editor component

* fix integration tests (missing className)

* bump @neo4j-cypher/react-codemirror

* bump @neo4j-cypher/react-codemirror

* bump @neo4j-cypher/react-codemirror

* bump @neo4j-cypher/react-codemirror to latest

add codemirror markdown packages as an experiment

* enable switching between cypher/markdown languages

* update yarn.lock

* fix lint errors

* update @neo4j-cypher/react-codemirror to latest (fix line number text height)

* Fixed breaking integration tests

Co-authored-by: Niels de Jong <Niels-121@hotmail.com>

--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,7 @@
     margin-left: -25px !important;
 }
 
-.autosize .ReactCodeMirror .CodeMirror {
+.autosize .cm-editor {
     height: auto;
 }
 
@@ -196,4 +196,8 @@
 
 .react-grid-layout {
     overflow-x: hidden;
+}
+
+.cm-tooltip-autocomplete {
+    margin-top: 4px;
 }
