--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,30 @@
+/* Needle */
+.logo-btn.large .ndl-icon {
+    width: 36px!important;
+    height: 36px!important;
+}
+
+.ndl-modal hr {
+    margin-top:0.5em!important;
+    margin-bottom:0.5em!important;
+}
+
+.centered {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.MuiInputBase-root {
+    font-family: "Nunito Sans", sans-serif!important;
+}
+
+.CodeMirror, .CodeMirror > * {
+    font-family: "Fira Code"!important;
+    font-size:0.9em;
+}
+/* End Needle */
+
 .MuiDrawer-paper {
     position: relative !important;
 }
