--- a/src/index.pcss
+++ b/src/index.pcss
@@ -5,12 +5,47 @@
 /* Create CSS class based components */
 /* https://tailwindcss.com/docs/reusing-styles#extracting-classes-with-apply */
 @layer components {
-    .btn-icon-sm {
-        @apply n-ml-token-2 n-w-4 n-h-4;
-    }
+  .btn-icon-sm-r {
+    @apply n-ml-token-2 n-w-4 n-h-4;
+  }
+  .btn-icon-sm-l {
+    @apply n-mr-token-2 n-w-4 n-h-4;
+  }
 
-    /* Make bullet list points in Markdown card view */
-    .card-view ul {
-        @apply n-list-disc n-ml-token-7;
-    }
+  .btn-icon-base-r {
+    @apply n-ml-token-3 n-w-6 n-h-6;
+  }
+
+  .btn-icon-base-l {
+    @apply n-mr-token-3 n-w-6 n-h-6;
+  }
+
+  .btn-icon-lg-r {
+    @apply n-ml-token-4 n-w-8 n-h-8;
+  }
+
+  .btn-icon-lg-l {
+    @apply n-mr-token-4 n-w-8 n-h-8;
+  }
+
+  .icon-base {
+    @apply n-w-6 n-h-6;
+  }
+
+  .icon-inline {
+    @apply n-inline n-mb-1;
+  }
+
+  .icon-inline.text-r {
+    @apply n-mr-token-3;
+  }
+
+  .icon-inline.text-l {
+    @apply n-ml-token-3;
+  }
+
+  /* Make bullet list points in Markdown card view */
+  .card-view ul {
+    @apply n-list-disc n-ml-token-7;
+  }
 }
