Fix CardAdd button background

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -63,4 +63,8 @@
   .ndl-dialog.dialog-xxl {
     max-width: 90%;
   }
+
+  .n-bg-dark-neutral-text-weak {
+    background-color: rgb(196 200 205 / var(--tw-bg-opacity)) !important;
+  }
 }
