Final fixes for 2.3.0 release

--- a/public/style.css
+++ b/public/style.css
@@ -129,6 +129,9 @@
   box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow) !important;
 }
 
+.white-text {
+  color: white !important;
+}
 .MuiCardHeader-content .MuiInputBase-root.Mui-disabled {
   color: inherit !important;
 }
