--- a/src/extensions/advancedcharts/chart/gantt/frappe/lib/gantt.css
+++ b/src/extensions/advancedcharts/chart/gantt/frappe/lib/gantt.css
@@ -3,159 +3,174 @@
  * (MIT License) 
  */
 
- .gantt {
-     .grid-background {
-         fill: none;
-     }
-     .grid-header {
-         fill: #ffffff;
-         stroke: '#e0e0e0 !default';
-         stroke-width: 1.4;
-     }
-     .grid-row {
-         fill: #ffffff;
-     }
-     .grid-row:nth-child(even) {
-         fill: '#f5f5f5 !default';
-     }
-     .row-line {
-         stroke: '#ebeff2 !default';
-     }
-     .tick {
-         stroke: '#e0e0e0 !default';
-         stroke-width: 0.2;
-         &.thick {
-             stroke-width: 0.4;
-         }
-     }
-     .today-highlight {
-         fill: '#fcf8e3 !default';
-         opacity: 0.5;
-     }
- 
-     .arrow {
-         fill: none;
-         stroke: '#666 !default';
-         stroke-width: 1.4;
-     }
- 
-     .bar {
-         fill: '#b8c2cc !default';
-         stroke: '#8D99A6 !default';
-         stroke-width: 0;
-         transition: stroke-width .3s ease;
-         user-select: none;
-     }
-     .bar-progress {
-         fill: '#a3a3ff !default';
-     }
-     .bar-invalid {
-         fill: transparent;
-         stroke: '#8D99A6 !default';
-         stroke-width: 1;
-         stroke-dasharray: 5;
- 
-         &~.bar-label {
-             fill: '#555 !default';
-         }
-     }
-     .bar-label {
-         fill: #fff;
-         dominant-baseline: central;
-         text-anchor: middle;
-         font-size: 12px;
-         font-weight: lighter;
- 
-         &.big {
-             fill: '#555 !default';
-             text-anchor: start;
-         }
-     }
- 
-     .handle {
-         fill: '#ddd !default';
-         cursor: ew-resize;
-         opacity: 0;
-         visibility: hidden;
-         transition: opacity .3s ease;
-     }
- 
-     .bar-wrapper {
-         cursor: pointer;
-         outline: none;
- 
-         &:hover {
-             .bar {
-                 fill: darken('#b8c2cc !default', 5);
-             }
- 
-             .bar-progress {
-                 fill: darken('#a3a3ff !default', 5);
-             }
- 
-             .handle {
-                 visibility: visible;
-                 opacity: 1;
-             }
-         }
- 
-         &.active {
-             .bar {
-                 fill: darken('#b8c2cc !default', 5);
-             }
- 
-             .bar-progress {
-                 fill: darken('#a3a3ff !default', 5);
-             }
-         }
-     }
- 
-     .lower-text, .upper-text {
-         font-size: 12px;
-         text-anchor: middle;
-     }
-     .upper-text {
-         fill: '#555 !default';
-     }
-     .lower-text {
-         fill: '#333 !default';
-     }
- 
-     .hide {
-         display: none;
-     }
- }
- 
- .gantt-container {
-     position: relative;
-     overflow: auto;
-     font-size: 12px;
- 
-     .popup-wrapper {
-         position: absolute;
-         top: 0;
-         left: 0;
-         background: rgba(0, 0, 0, 0.8);
-         padding: 0;
-         color: #959da5;
-         border-radius: 3px;
- 
-         .title {
-             border-bottom: 3px solid #a3a3ff;
-             padding: 10px;
-         }
- 
-         .subtitle {
-             padding: 10px;
-             color: #dfe2e5;
-         }
- 
-         .pointer {
-             position: absolute;
-             height: 5px;
-             margin: 0 0 0 -5px;
-             border: 5px solid transparent;
-             border-top-color: rgba(0, 0, 0, 0.8);
-         }
-     }
- }
+.gantt .grid-background {
+    fill: none;
+}
+
+.gantt .grid-header {
+    fill: #ffffff;
+    stroke: #e0e0e0;
+    stroke-width: 1.4;
+}
+
+.gantt .grid-row {
+    fill: #ffffff;
+}
+
+.gantt .grid-row:nth-child(even) {
+    fill: #f5f5f5;
+}
+
+.gantt .row-line {
+    stroke: #ebeff2;
+}
+
+.gantt .tick {
+    stroke: #e0e0e0;
+    stroke-width: 0.2;
+
+    &.thick {
+        stroke-width: 0.4;
+    }
+}
+
+.gantt .today-highlight {
+    fill: #fcf8e3;
+    opacity: 0.5;
+}
+
+.gantt .arrow {
+    fill: none;
+    stroke: '#666';
+    stroke-width: 1.4;
+}
+
+.gantt .bar {
+    fill: #b8c2cc;
+    stroke: #8D99A6;
+    stroke-width: 0;
+    transition: stroke-width .3s ease;
+    user-select: none;
+}
+
+.gantt .bar-progress {
+    fill: #a3a3ff;
+}
+
+.gantt .bar-invalid {
+    fill: transparent;
+    stroke: #8D99A6;
+    stroke-width: 1;
+    stroke-dasharray: 5;
+
+
+}
+
+.gantt .bar-invalid .bar-label {
+    fill: '#555';
+}
+
+.gantt .bar-label {
+    fill: #fff;
+    dominant-baseline: central;
+    text-anchor: middle;
+    font-size: 12px;
+    font-weight: lighter;
+
+}
+
+.gantt .bar-label .big {
+    fill: #555;
+    text-anchor: start;
+}
+
+.gantt .handle {
+    fill: #ddd;
+    cursor: ew-resize;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .3s ease;
+}
+
+.gantt .bar-wrapper {
+    cursor: pointer;
+    outline: none;
+}
+
+
+.gantt .bar-wrapper:hover .bar {
+    fill: darken('#b8c2cc ', 5);
+}
+
+.gantt .bar-wrapper:hover .bar-progress {
+    fill: darken('#a3a3ff ', 5);
+}
+
+.gantt .bar-wrapper:hover .handle {
+    visibility: visible;
+    opacity: 1;
+}
+
+
+
+.gantt .bar-wrapper:active .bar {
+    fill: darken('#b8c2cc ', 5);
+}
+
+.gantt .bar-wrapper:active .bar-progress {
+    fill: darken('#a3a3ff ', 5);
+}
+
+
+.gantt .lower-text,
+.gantt .upper-text {
+    font-size: 12px;
+    text-anchor: middle;
+}
+
+.gantt .upper-text {
+    fill: #555;
+}
+
+.gantt .lower-text {
+    fill: #333;
+}
+
+.hide {
+    display: none;
+}
+
+
+.gantt-container {
+    /* position: relative; */
+    /* overflow: auto; */
+    font-size: 12px;
+}
+
+.gantt-container .popup-wrapper {
+    position: relative;
+    width: 200;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    padding: 0;
+    color: #959da5;
+    border-radius: 3px;
+}
+
+.gantt-container .popup-wrapper .title {
+    border-bottom: 3px solid #a3a3ff;
+    padding: 10px;
+}
+
+.gantt-container .popup-wrapper .subtitle {
+    padding: 10px;
+    color: #dfe2e5;
+}
+
+.gantt-container .popup-wrapper .pointer {
+    position: absolute;
+    height: 5px;
+    margin: 0 0 0 -5px;
+    border: 5px solid transparent;
+    border-top-color: rgba(0, 0, 0, 0.8);
+}
