Gantt - fixed default width/height for bars. Visible labels. Handling quarters

--- a/src/extensions/advancedcharts/chart/gantt/frappe/lib/gantt.css
+++ b/src/extensions/advancedcharts/chart/gantt/frappe/lib/gantt.css
@@ -71,7 +71,7 @@
 }
 
 .gantt .bar-label {
-    fill: #fff;
+    fill: #000;
     dominant-baseline: central;
     text-anchor: middle;
     font-size: 12px;
