--- a/public/style.css
+++ b/public/style.css
@@ -239,4 +239,14 @@
   z-index: 99 !important;
   position: absolute;
 }
+
 /* End workaround */
+
+/* Workaround for cleaning the Gantt chart UI */
+.gantt-wrapper > div > div:first-child > div:first-child > div:first-child > div> div:not(:first-child) {
+  display: none;
+}
+.gantt-wrapper > div > div > div > div> div>  div> div:not(:first-child)  {
+  display: none;
+}
+/* End Gantt chart workaround */
