--- a/public/style.css
+++ b/public/style.css
@@ -128,6 +128,10 @@
   overflow-y: hidden !important;
 }
 
+.MuiDataGrid-panel{
+  translate: 0px -152%;
+}
+
 .MuiCard-root {
   box-shadow: 0 0 #0000,0 0 #0000,var(--tw-shadow) !important;
   box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow) !important;
