--- a/public/style.css
+++ b/public/style.css
@@ -165,7 +165,7 @@
   white-space: pre;
   background-position: 0px -11px;
   padding-right: 0px !important;
-  margin-top: 0px !important;
+  margin-top: 0px;
   padding-left: 30px;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
